# sentineltray

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Executar SentinelTray.cmd  LICENSE  PRIVACY.md  README.md  SECURITY.md  SentinelTray.spec  SentinelTray_debug.spec  Z7_SentinelTray.spec  build_530.txt  build_output.txt  build_output2.txt  build_output3.txt  cli.py  config.yaml  install.cmd  main.py  pyproject.toml  requirements.txt  smoke_530.txt  smoke_out.txt  smoke_out2.txt  smoke_out3.txt  smoke_out4.txt  smoke_output.txt  smoke_output4.txt  smoke_test_results.txt  test_final.txt  test_final2.txt  test_out.txt  test_theme_out.txt  test_theme_out2.txt  unit_530.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: python-testing.agent.md
.github/workflows/: provenance.yml  release-audit.yml  scorecard.yml  security-ci.yml
build (# Name clash 2026-04-16 r0te2oC #)/pyinstaller/SentinelTray/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-SentinelTray.txt  xref-SentinelTray.html
config/: config.local.yaml.example
deprecated/: cli.py  test_cli.py  tray_cli.py
docs/: AI_PROMPT.md  architecture.md  audit.md  licenses.md  maintenance.md  release-checklist.md  release-notes-1.0.0-beta.10.md  release-notes-1.0.0-beta.3.md  release-notes-1.0.0-beta.4.md  release-notes-1.0.0-beta.5.md  release-notes-1.0.0-beta.6.md  release-notes-1.0.0-beta.7.md  release-notes-1.0.0-beta.8.md  release-notes-1.0.0-beta.9.md  release-notes-3.0.0-rc.1.md  release-notes-3.0.0-rc.2.md  release-notes-3.0.0-rc.3.md  release-notes-3.0.0.md  release-notes-3.1.0-rc.1.md  release-notes-3.2.0-rc.2.md  release-notes-3.5.7.md  release-notes-3.6.0.md  release-notes-4.0.0-rc.1.md  release-notes-4.0.0-rc.2.md  release-notes-4.1.0.md  release-notes-4.2.0.md  release-notes-4.3.0.md  release-notes-4.3.6.md
logs/: sentineltray.jsonl  sentineltray_20260406_132916_17528.jsonl  sentineltray_20260406_132917_17528.jsonl  sentineltray_20260406_133020_17988.jsonl
scripts/: activate_venv.cmd  bootstrap_runtime.py  bootstrap_self_contained.cmd  build_named_exe.cmd  build_named_exe.ps1  create_shortcut.ps1  deploy.ps1  generate_icon.py  install.cmd  package_portable.cmd  package_portable.ps1  prepare_portable_runtime.cmd  prepare_portable_runtime.ps1  run.cmd  uninstall.cmd
shortcuts/: README.md  SentinelTray.lnk
src/notificator/: __init__.py  app.py  config.py  detector.py  logging_setup.py  status.py  tray_app.py  whatsapp_sender.py
src/notificator.egg-info/: PKG-INFO  SOURCES.txt
src/sentineltray/: __init__.py  app (# Edit conflict 2026-04-06 byn3blC #).py  app.py  cli.py  cli_control.py  config.py  config_reconcile.py  console_app.py  detector.py  dpapi_utils.py  email_sender.py  entrypoint.py  gui_app (# Edit conflict 2026-04-18 diq0o2C #).py  gui_app.py  io_utils.py  logging_setup.py  path_utils.py  security_utils.py  status.py  status_cli.py  telemetry.py  tray_app.py  tray_cli.py  validation_utils.py  whatsapp_sender.py
src/sentineltray.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/z7_sentineltray/: __init__.py  app.py  cli.py  config.py  config_reconcile.py  console_app.py  detector.py  dpapi_utils.py  email_queue_utils.py  email_sender.py  entrypoint.py  gui_app (# Edit conflict 2026-04-18 diq0o2C #).py  gui_app.py  idle_utils.py  io_utils.py  logging_setup.py  path_utils.py  scan_utils.py  splash.py  status.py  telemetry.py  tray_app.py  validation_utils.py
templates/local/: README.md  config.local.yaml  state.json
tests/: conftest.py  test_activate_venv_script.py  test_alert_message_delta.py  test_atomic_write.py  test_backoff.py  test_bootstrap_runtime_pip_fallback.py  test_bootstrap_runtime_script.py  test_build_named_exe_script.py  test_cli.py  test_config.py  test_config_override.py  test_config_reconcile.py  test_config_template_sync.py  test_config_validation.py  test_console_app.py  test_debounce.py  test_detector.py  test_detector_matches.py  test_detector_restore.py  test_detector_scan_conditions.py  test_disk_check.py  test_dpapi_utils.py  test_email_auth_disable.py  test_email_queue.py  test_email_queue_utils.py  test_email_sender.py  test_entrypoint_smtp_prompt (# Edit conflict 2026-04-16 fyt6aqC #).py  test_entrypoint_smtp_prompt.py  test_error_reporting.py  test_exe_smoke.py  test_healthcheck_message.py  test_idle_gate.py  test_idle_utils.py  test_install_assets.py  test_install_script.py  test_io_utils.py  test_local_templates.py  test_log_only_mode.py  test_logging_setup.py  test_main_import.py  (+28 more)
tests/data/: config.yaml  config_override.yaml
