[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentineltray"
version = "1.0.0b7"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--cov=sentineltray",
    "--cov-report=term-missing",
    "--cov-report=html",
]
norecursedirs = [
	".venv",
	"runtime",
	"runtime/*",
	"runtime/python",
	"runtime/python/Lib",
	"runtime/python/Lib/site-packages",
	"**/site-packages",
]

[tool.coverage.run]
branch = true
source = ["src/sentineltray"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
