[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "z7_sentineltray"
version = "5.5.0"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Christian Martin dos Santos" },
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--cov=z7_sentineltray",
    "--cov-report=term-missing",
    "--cov-report=html",
]
norecursedirs = [
	".venv",
	"runtime",
	"runtime/*",
	"runtime/python",
	"runtime/python/Lib",
	"runtime/python/Lib/site-packages",
	"**/site-packages",
]

[tool.coverage.run]
branch = true
source = ["src/z7_sentineltray"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
