[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "z7_sentineltray"
version = "6.0.1"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Christian Martin dos Santos" },
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=3.7.0",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--cov=z7_sentineltray",
    "--cov-report=term-missing",
    "--cov-report=html",
]
norecursedirs = [
    ".venv",
    "runtime",
    "runtime/*",
    "runtime/python",
    "runtime/python/Lib",
    "runtime/python/Lib/site-packages",
    "**/site-packages",
]

[tool.coverage.run]
branch = true
source = ["src/z7_sentineltray"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# Mypy — strict static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Ruff — linter and formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "build",
    "dist",
    "runtime",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle (Google convention)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C90",  # mccabe complexity
    "ANN",  # flake8-annotations
    "PT",   # flake8-pytest-style
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops (exception handling)
    "N",    # pep8-naming
]
ignore = [
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__ (documented at class level)
    "TRY003", # Avoid specifying long messages outside the exception class
    "TRY301", # Abstract `raise` to an inner function
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",    # Don't require annotations in tests
    "D",      # Don't require docstrings in tests
    "SIM117", # Allow nested with statements in tests
]
"scripts/**/*.py" = [
    "ANN",
    "D",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
